--- a/HTMLServletConnection/WebContent/index.html
+++ b/HTMLServletConnection/WebContent/index.html
@@ -3,14 +3,31 @@
 <body>
 
 <form action="ProcessForm" method = "post">
-First name:<br>
-<input type="text" name="firstname">
+<label for ="name">First name:</label>
+<input type="text" name="firstname"><br>
 <br>
 Last name:<br>
 <input type="text" name="lastname">
 <br><br>
-<input type="submit" value="Submit">
+
+<select name = "car">
+  <optgroup label="Swedish Cars">
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+  </optgroup>
+  <optgroup label="German Cars">
+    <option value="mercedes">Mercedes</option>
+    <option value="audi">Audi</option>
+  </optgroup>
+</select>
+
+<button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+
+
+
+
 </form> 
+
 
 
 </body>
